[package]
name = "ic-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.2"
hex = "0.4"
once_cell = "1.9"
sqlite-vfs = { package = "sqlite-vfs-ic", version = "0.2" }
rusqlite = { package = "rusqlite-ic", version = "0.28", features = ["bundled", "serde_json"]}