[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-sqlite = { path = "../../../ic-sqlite", version = "0.1.0" }
rusqlite = { package = "rusqlite-ic", version = "0.28", features = ["bundled", "serde_json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"